--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,9 +2,15 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 45px 0 0 0;
   max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 480px) {
   .header {
-    margin: 28px 0 0 0;
+    flex-direction: column;
+    margin: 20px 0 0 0;
+    padding: 0 0 20px 0;
   }
 }
