--- a/src/blocks/popup-menu/__edit-form/popup-menu__edit-form.css
+++ b/src/blocks/popup-menu/__edit-form/popup-menu__edit-form.css
@@ -7,6 +7,8 @@
   padding: 0 36px 34px 36px;
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
 }
 @media screen and (max-width: 420px) {
   .popup-menu__edit-form {
