--- a/src/blocks/profile-menu/__alignment/profile-menu__alignment.css
+++ b/src/blocks/profile-menu/__alignment/profile-menu__alignment.css
@@ -8,6 +8,7 @@
 @media screen and (max-width: 928px) {
   .profile-menu__alignment {
     text-align: center;
+    justify-content: center;
     margin: 30px 0 14px 0;
   }
 }
