--- a/src/blocks/header/__alignment/header__alignment.css
+++ b/src/blocks/header/__alignment/header__alignment.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 @media screen and (max-width:480px) {
